# FinanceCrawler

./: .gitignore  README.md  batch_crawler_design.md  data_integrator.py  eastmoney_fetcher.py  hk_details_fetcher.py  main.py  news_fetcher.py  pyproject.toml  stock_data.csv  stock_details_fetcher.py
app/: __init__.py  data_integrator.py  main.py
batch_crawler/: __init__.py  config.py  crawler.py  db.py
batch_crawler/database/: financial_data.db
fetchers/: eastmoney_fetcher.py  hk_details_fetcher.py  news_fetcher.py
