[tool.poetry]
name = "financecrawler"
version = "0.1.0"
description = ""
authors = ["hwp <wzhi.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12"
requests = ">=2.32.4,<3.0.0"
pandas = ">=2.3.1,<3.0.0"
streamlit = ">=1.46.1,<2.0.0"
playwright = ">=1.53.0,<2.0.0"
beautifulsoup4 = ">=4.13.4,<5.0.0"
lxml = ">=6.0.0,<7.0.0"
nest-asyncio = ">=1.6.0,<2.0.0"

[[tool.poetry.source]]
name = "tuna"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
